[project]
name = "agent-system"
version = "0.1.0"
description = "通用Agent系统"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "asyncio",
    "tenacity>=8.2.3",
    "aiosqlite>=0.19.0", # For async SQLite
    "asyncpg>=0.29.0",   # For async PostgreSQL (optional, if you use PostgreSQL)
    "aiomysql>=0.2.0"    # For async MySQL (optional, if you use MySQL)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]
